--- a/coinstac-storage-proxy/src_model-benchmark.js.html
+++ b/coinstac-storage-proxy/src_model-benchmark.js.html
@@ -46,6 +46,7 @@
  * small: less than 1ms per operation...
  */
 
+/* eslint-disable no-console */
 const Consortium = require('coinstac-common').models.Consortium;
 
 const config = {
@@ -95,6 +96,7 @@ while (i &lt; 10000) {
 }
 
 console.timeEnd('Pure Function');
+/* eslint-enable no-console */
 </code></pre>
         </article>
     </section>
