--- a/coinstac-simulator/index.js.html
+++ b/coinstac-simulator/index.js.html
@@ -23,7 +23,7 @@
 <label for="nav-trigger" class="overlay"></label>
 
 <nav>
-    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-simulator.html">simulator</a><ul class='methods'><li data-type='method'><a href="module-simulator.html#.killProcesses">killProcesses</a></li><li data-type='method'><a href="module-simulator.html#.run">run</a></li></ul></li></ul>
+    <h2><a href="index.html">Home</a></h2><h3>Modules</h3><ul><li><a href="module-simulator.html">simulator</a><ul class='methods'><li data-type='method'><a href="module-simulator.html#.run">run</a></li></ul></li></ul>
 </nav>
 
 <div id="main">
@@ -52,7 +52,7 @@ const bootClients = require('./boot-clients');
 const bootDBServer = require('./boot-db-server');
 const seedCentralDB = require('./seed-central-db');
 const flatten = require('lodash/flatten');
-// const values = require('lodash/values');
+const values = require('lodash/values');
 
 /**
  * Processes.
@@ -71,7 +71,9 @@ const processes = {
 };
 
 // Ensure all processes are killed
-process.on('exit', module.exports.killProcesses);
+process.on('exit', () => {
+  flatten(values(processes)).forEach(p => p.kill());
+});
 
 module.exports = {
   /**
@@ -136,13 +138,6 @@ module.exports = {
         .catch((err) => reject(err));
       });
     });
-  },
-
-  /**
-   * Send kill signals to all processes.
-   */
-  killProcesses() {
-    flatten(values(processes)).forEach(p => p.kill());
   },
 };
 </code></pre>
