--- a/coinstac-server-core/src_services_computation-registry.js.html
+++ b/coinstac-server-core/src_services_computation-registry.js.html
@@ -48,8 +48,9 @@
 
 const coinstacCommon = require('coinstac-common');
 const os = require('os');
-const mkdirp = require('mkdirp-promise');
+const mkdirp = require('mkdirp');
 const path = require('path');
+const pify = require('pify');
 
 const logger = require('./logger');
 
@@ -107,7 +108,7 @@ module.exports = {
    * @returns {Promise} resolves with computations dir
    */
   upsertComputationsDir() {
-    return mkdirp(this.getComputationsPath());
+    return pify(mkdirp)(this.getComputationsPath());
   },
 
   /**
