--- a/coinstac-server-core/src_services_logger.js.html
+++ b/coinstac-server-core/src_services_logger.js.html
@@ -42,8 +42,9 @@
         <article>
             <pre class="prettyprint source linenums"><code>'use strict';
 
-const mkdirp = require('mkdirp-promise');
+const mkdirp = require('mkdirp');
 const path = require('path');
+const pify = require('pify');
 const touch = require('touch');
 const winston = require('winston');
 
@@ -85,17 +86,12 @@ const logger = new (winston.Logger)({
  * Set up file transport async. If an error occurs the executable will catch the
  * unhandled rejection and shut the server down.
  */
-mkdirp(LOG_DIR)
-  .then(() => {
-    return new Promise((resolve, reject) => {
-      touch(path.join(LOG_DIR, LOG_BASE), error => {
-        if (error) {
-          reject(error);
-        } else {
-          resolve();
-        }
-      });
-    });
+pify(mkdirp)(LOG_DIR)
+  .then(() => pify(touch)(path.join(LOG_DIR, LOG_BASE)))
+  .catch(() => {
+    throw new Error(
+      `Couldn't create log file: ${path.join(LOG_DIR, LOG_BASE)}`
+    );
   })
   .then(() => {
     logger.add(winston.transports.File, {
