--- a/coinstac-simulator/boot-clients.js.html
+++ b/coinstac-simulator/boot-clients.js.html
@@ -66,7 +66,7 @@ function getReadyClient({
 }) {
   return new Promise((resolve, reject) => {
     const client = cp.fork(path.join(__dirname, 'boot-client.js'), {
-      cwd: process.cwd(),
+      cwd: path.dirname(computationPath),
       silent: true,
     });
 
