--- a/coinstac-simulator/index.js.html
+++ b/coinstac-simulator/index.js.html
@@ -137,7 +137,10 @@ const exportList = {
           undefined;
 
         return Promise.all([
-          declaration.computationPath,
+          path.resolve(
+            path.dirname(require.resolve(declarationPath)),
+            declaration.computationPath
+          ),
           local,
           remote,
           !!declaration.verbose,
