--- a/coinstac-simulator/db-server.js.html
+++ b/coinstac-simulator/db-server.js.html
@@ -116,6 +116,7 @@ function setup({ computationPath, usernames }) {
       );
       const defaultConsortium = new Consortium({
         _id: `testconsortiumid${Date.now()}`,
+        activeComputationInputs: [[]],
         description: 'test-default-consortium',
         label: 'test-default-consortium',
         owners: usernames,
